Fixed linux cublas filepaths

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -80,7 +80,7 @@ jobs:
           path: .\build\bin\Release\llama.dll
           name: llama-bin-win-${{ matrix.build }}-x64.dll
 
-  compile-windows-cublas:
+  compile-cublas:
     if: ${{ github.event.inputs.cublas }}
     name: Compile (cublas)
     strategy:
@@ -106,7 +106,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake .. -DLLAMA_CUBLAS=ON -DBUILD_SHARED_LIBS=ON
+          cmake .. -DLLAMA_CUBLAS=ON -DBUILD_SHARED_LIBS=ON -DLLAMA_BUILD_TESTS=OFF -DLLAMA_BUILD_EXAMPLES=OFF -DLLAMA_BUILD_SERVER=OFF
           cmake --build . --config Release
           ls -R
 
@@ -120,7 +120,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         uses: actions/upload-artifact@v3
         with:
-          path: .\build\bin\Release\llama.so
+          path: ./build/libllama.so
           name: llama-bin-linux-cublas-cu${{ matrix.cuda }}-x64.so
     
   compile-macos:
@@ -130,11 +130,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        include:
-          - build: 'arm64'
-            arch: 'arm64'
-          - build: 'x86_64'
-            arch: 'x86_64'
+        arch: [
+          "arm64",
+          #"x86_64"
+        ]
 
     steps:
       - uses: actions/checkout@v3
@@ -168,7 +167,7 @@ jobs:
       "compile-linux",
       "compile-macos",
       "compile-windows",
-      "compile-windows-cublas"
+      "compile-cublas"
     ]
     steps:      
       - uses: actions/download-artifact@v3
@@ -214,8 +213,10 @@ jobs:
         run: |
           mkdir cu11.7.1
           cp artifacts/llama-bin-win-cublas-cu11.7.1-x64.dll/llama.dll cu11.7.1/libllama.dll
+          cp artifacts/llama-bin-win-cublas-cu11.7.1-x64.so/libllama.so cu11.7.1/libllama.so
           mkdir cu12.1.0
           cp artifacts/llama-bin-win-cublas-cu12.1.0-x64.dll/llama.dll cu12.1.0/libllama.dll
+          cp artifacts/llama-bin-win-cublas-cu12.1.0-x64.dll/libllama.so cu12.1.0/libllama.so
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
