--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -208,7 +208,7 @@ jobs:
           cp artifacts/llama-bin-macos-cpu.dylib/libllama.dylib deps/macos-cpu/libllama-cpu.dylib
           mkdir deps/macos-metal
           cp artifacts/llama-bin-macos-metal.dylib/libllama.dylib deps/macos-metal/libllama-metal.dylib
-          cp artifacts/llama-bin-macos-metal.dylib/ggml-metal.metal deps/macos-metal/ggml-metal.metal
+          cp artifacts/ggml-metal.metal/ggml-metal.metal deps/macos-metal/ggml-metal.metal
 
       - name: Rearrange CUDA files
         if: ${{ github.event.inputs.cublas }}
