--- a/LLama.Web/appsettings.json
+++ b/LLama.Web/appsettings.json
@@ -7,48 +7,34 @@
   },
   "AllowedHosts": "*",
   "LLamaOptions": {
+    "ModelLoadType": "Single",
     "Models": [
       {
         "Name": "WizardLM-7B",
-        "MaxInstances": 2,
+        "MaxInstances": 20,
         "ModelPath": "D:\\Repositories\\AI\\Models\\wizardLM-7B.ggmlv3.q4_0.bin",
-        "ContextSize": 2048
-      }
-    ],
-    "Parameters": [
-      {
-        "Name": "Default",
-        "Temperature": 0.6
-      }
-    ],
-    "Prompts": [
-      {
-        "Name": "None",
-        "Prompt": ""
-      },
-      {
-        "Name": "Alpaca",
-        "Path": "D:\\Repositories\\AI\\Prompts\\alpaca.txt",
-        "AntiPrompt": [
-          "User:"
-        ],
-        "OutputFilter": [
-          "Response:",
-          "User:"
-        ]
-      },
-      {
-        "Name": "ChatWithBob",
-        "Path": "D:\\Repositories\\AI\\Prompts\\chat-with-bob.txt",
-        "AntiPrompt": [
-          "User:"
-        ],
-        "OutputFilter": [
-          "Bob:",
-          "User:"
-        ]
+        "ContextSize": 2048,
+        "BatchSize": 2048,
+        "Threads": 4,
+        "GpuLayerCount": 6,
+        "UseMemorymap": true,
+        "UseMemoryLock": false,
+        "MainGpu": 0,
+        "LowVram": false,
+        "Seed": 1686349486,
+        "UseFp16Memory": true,
+        "Perplexity": false,
+        "LoraAdapter": "",
+        "LoraBase": "",
+        "EmbeddingMode": false,
+        "TensorSplits": null,
+        "GroupedQueryAttention": 1,
+        "RmsNormEpsilon": 0.000005,
+        "RopeFrequencyBase": 10000.0,
+        "RopeFrequencyScale": 1.0,
+        "MulMatQ": false,
+        "Encoding": "UTF-8"
       }
     ]
-
   }
 }
