Fix up issues found during testing

--- a/LLama.Web/appsettings.json
+++ b/LLama.Web/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "LLamaOptions": {
-    "ModelLoadType": "Single",
+    "ModelLoadType": 0,
     "Models": [
       {
-        "Name": "WizardLM-7B",
+        "Name": "LLama2-7b-Chat",
         "MaxInstances": 20,
-        "ModelPath": "D:\\Repositories\\AI\\Models\\wizardLM-7B.ggmlv3.q4_0.bin",
+        "ModelPath": "..\\LLama.Unittest\\Models\\llama-2-7b-chat.Q4_0.gguf",
         "ContextSize": 2048,
         "BatchSize": 2048,
         "Threads": 4,
