--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -147,7 +147,7 @@ jobs:
           mkdir build
           cd build
           cmake .. ${{ matrix.defines }}
-          cmake --build . --config Release
+          cmake --build . --config Release -j $(sysctl -n hw.logicalcpu)
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
